# starrygl-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  compile.out  evaluate_preprocessing.py  inspect_mega_batch.py  install.sh  log.out  prepare_batch_data.py  prepare_nparts.py  prepare_nparts_louvain.py  prepare_part_data.py  prepare_sample.py  profile_simple_3276670.nsys-rep  profile_simple_3277139.nsys-rep  profile_simple_3281751.nsys-rep  profile_simple_3286837.nsys-rep  profile_simple_3346343.nsys-rep  profile_simple_3351426.nsys-rep  profile_simple_3402322.nsys-rep  profile_simple_3402859.nsys-rep  profile_simple_3460623.nsys-rep  profile_simple_3462828.nsys-rep  profile_simple_3547050.nsys-rep  profile_simple_3580357.nsys-rep  profile_simple_3631944.nsys-rep  run.sh  run_flare.py  starrygl_profile_3226205.nsys-rep  starrygl_profile_3233283.nsys-rep  t  test.cpp  test.md  test_cpp17  test_cpp17.cpp
analysis/: duration.py
cpp_preprocess/: CMakeLists.txt  log  run.sh
cpp_preprocess/src/: main.cpp
logs_flare/20251021_155934_GPU04/: log.txt  params.txt
logs_flare/20251215_214734_GPU04/: log.txt
logs_flare/20251215_214752_GPU04/: log.txt
logs_flare/20251215_214902_GPU04/: log.txt
logs_flare/20251215_214921_GPU04/: log.txt
logs_flare/20251215_215353_GPU04/: log.txt
logs_flare/20251215_215524_GPU04/: log.txt
logs_flare/20251215_215634_GPU04/: log.txt
logs_flare/20251215_215808_GPU04/: log.txt
logs_flare/20251215_215832_GPU04/: log.txt
logs_flare/20251215_215856_GPU04/: log.txt
logs_flare/20251215_220006_GPU04/: log.txt
logs_flare/20251215_220124_GPU04/: log.txt
logs_flare/20251215_220227_GPU04/: log.txt
logs_flare/20251215_220818_GPU04/: log.txt
logs_flare/20251215_220921_GPU04/: log.txt
logs_flare/20251215_221014_GPU04/: log.txt
logs_flare/20251215_221538_GPU04/: log.txt
logs_flare/20251215_222145_GPU04/: log.txt
logs_flare/20251215_222207_GPU04/: log.txt
logs_flare/20251215_222515_GPU04/: log.txt
logs_flare/20251216_115206_GPU04/: log.txt
logs_flare/20251216_115302_GPU04/: log.txt
logs_flare/20251216_115314_GPU04/: log.txt
logs_flare/20251216_115516_GPU04/: log.txt
logs_flare/20251216_115613_GPU04/: log.txt
logs_flare/20251216_115653_GPU04/: log.txt
logs_flare/20251216_144149_GPU04/: log.txt
logs_flare/20251216_144229_GPU04/: log.txt
logs_flare/20251216_150933_GPU04/: log.txt
logs_flare/20251216_151011_GPU04/: log.txt
logs_flare/20251216_151455_GPU04/: log.txt
logs_flare/20251216_153519_GPU04/: log.txt
logs_flare/20251216_153902_GPU04/: log.txt
logs_flare/20251216_154200_GPU04/: log.txt
logs_flare/20251216_154401_GPU04/: log.txt
logs_flare/20251216_154624_GPU04/: log.txt
logs_flare/20251216_154721_GPU04/: log.txt
logs_flare/20251216_155559_GPU04/: log.txt
logs_flare/20251216_161951_GPU04/: log.txt
logs_flare/20251216_162619_GPU04/: log.txt
logs_flare/20251216_162755_GPU04/: log.txt
logs_flare/20251216_165050_GPU04/: log.txt
logs_flare/20251216_165216_GPU04/: log.txt
logs_flare/20251216_165411_GPU04/: log.txt
logs_flare/20251216_165645_GPU04/: log.txt
logs_flare/20251216_170119_GPU04/: log.txt
logs_flare/20251216_170328_GPU04/: log.txt
logs_flare/20251216_170535_GPU04/: log.txt
logs_flare/20251216_171310_GPU04/: log.txt
logs_flare/20251216_172843_GPU04/: log.txt
logs_flare/20251216_173312_GPU04/: log.txt
logs_flare/20251216_173556_GPU04/: log.txt
logs_flare/20251216_174431_GPU04/: log.txt
logs_flare/20251217_110140_GPU04/: log.txt
logs_flare/20251217_111508_GPU04/: log.txt
logs_flare/20251217_112119_GPU04/: log.txt
logs_flare/20251217_112930_GPU04/: log.txt
logs_flare/20251217_113053_GPU04/: log.txt
logs_flare/20251217_113635_GPU04/: log.txt
logs_flare/20251217_113748_GPU04/: log.txt
logs_flare/20251217_114007_GPU04/: log.txt
logs_flare/20251217_114336_GPU04/: log.txt
logs_flare/20251217_115339_GPU04/: log.txt
logs_flare/20251217_123813_GPU04/: log.txt
logs_flare/20251217_124030_GPU04/: log.txt
logs_flare/20251217_160154_GPU04/: log.txt  params.txt
logs_flare/20251217_163956_GPU04/: log.txt
logs_flare/20251217_170145_GPU04/: log.txt
logs_flare/20251217_195332_GPU04/: log.txt
logs_flare/20251217_201021_GPU04/: log.txt
logs_flare/20251217_215005_GPU04/: log.txt
logs_flare/20251217_215521_GPU04/: log.txt
test/: test.py  test_dataloader.py  test_offline.py  test_old.py  test_sample.py
(+132 files in other folders)
